Update SVM and main notebook

--- a/SVM_movie_predictions.ipynb
+++ b/SVM_movie_predictions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# HW\n",
+    "# SVM Model\n",
     "\n",
     "Ben Burt\n",
     "\n",
@@ -16,7 +16,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -40,50 +42,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = pd.read_csv(\"/Users/Armen/Desktop/SpringDataProject/ratings.csv\")"
+    "#Benjamin's path: path = \"/Users/Armen/Desktop/SpringDataProject/\"\n",
+    "#Ben C's path:\n",
+    "path = \"/Users/benchristensen/Desktop/Recommneder_System_Project/ml-20m/\"\n",
+    "r = pd.read_csv(path+\"ratings.csv\",nrows=100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
-   "metadata": {},
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "def set_up_test(user_id):\n",
-    "    #inidiscriminately chopping up the dataset to get something small\n",
-    "    df = r[r.userId < 200]\n",
-    "    df = df[df.movieId < 2000]\n",
-    "    user_c = CategoricalDtype(sorted(df.userId.unique()), ordered=True)\n",
-    "    movie_c = CategoricalDtype(sorted(df.movieId.unique()), ordered=True)\n",
-    "    row = df.userId.astype(user_c).cat.codes\n",
-    "    col = df.movieId.astype(movie_c).cat.codes\n",
-    "    #this matrix is movies x users\n",
-    "    matrix = csr_matrix((df['rating'], (row, col)) \\\n",
-    "                        , shape=(user_c.categories.size, movie_c.categories.size)).todense().T\n",
-    "    \n",
-    "    #take out our lucky user\n",
-    "    user1 = np.ravel(matrix[:,user_id])\n",
-    "    matrix = np.delete(matrix, user_id, axis = 1)\n",
-    "\n",
-    "    #we can only train on the movies that the user has seen\n",
-    "    movies_not_seen = np.where(user1 == 0)[0]\n",
-    "    movies_seen = np.where(user1 != 0)[0]\n",
-    "    \n",
-    "    #turn user's rating into binary 'liked' (1) or 'disliked' (-1)\n",
-    "    known_ratings = user1[movies_seen]\n",
-    "    known_ratings[known_ratings <= 3] = -1 #right now the cutoff is 3. could also try 2.5?\n",
-    "    known_ratings[known_ratings > 3] = 1\n",
-    "    \n",
-    "    #replace all the Nan's with 3's.\n",
-    "    matrix[matrix == 0] = 3\n",
-    "    \n",
-    "    return pd.DataFrame(matrix), movies_not_seen, movies_seen, known_ratings\n",
-    "\n",
-    "def for_real(user_id):\n",
+    "def data_setup(user_id):\n",
+    "    \"\"\"\n",
+    "    This function prepares our data for the train test split\n",
+    "    Inputs: \n",
+    "    user_id\n",
+    "    Outputs:\n",
+    "    dfs \n",
+    "    movies_not_seen\n",
+    "    movies_seen\n",
+    "    known_ratings\n",
+    "    \"\"\"\n",
     "    #get only those movies with more than 17 ratings (cutting out ~50% of movies)\n",
     "    merged = r.merge(r.groupby(\"movieId\").size().reset_index(name='count'),\n",
     "                     how='right', on='movieId')\n",
@@ -91,7 +78,7 @@
     "    \n",
     "    #get our lucky user\n",
     "    user1 = df[df.userId == user_id]\n",
-    "    print(user1)\n",
+    "\n",
     "    df.drop(labels=df[df.userId == user_id].index, axis=0, inplace=True)\n",
     "    \n",
     "    #create a matrix from the ratings list\n",
@@ -124,59 +111,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "user_id = 50\n",
-    "dfs, movies_not_seen, movies_seen, known_ratings = set_up_test(user_id)\n",
-    "#dfs, movies_not_seen, movies_seen, known_ratings = for_real(user_id)"
+    "#dfs, movies_not_seen, movies_seen, known_ratings = set_up_test(user_id)\n",
+    "dfs, movies_not_seen, movies_seen, known_ratings = data_setup(user_id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "#for the test train split, we only want the movies for which we have labels\n",
-    "x_train, x_test, y_train, y_test = train_test_split(dfs.iloc[movies_seen].values,known_ratings)\n",
+    "#print(movies_seen)\n",
+    "#print(dfs.loc[movies_seen])\n",
+    "x_train, x_test, y_train, y_test = train_test_split(dfs.loc[movies_seen].values,known_ratings)\n",
     "\n",
     "#This is what we'll want to predict\n",
-    "x_to_predict = dfs.iloc[movies_not_seen]"
+    "x_to_predict = dfs.loc[movies_not_seen]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7857142857142857"
+       "0.9130434782608695"
       ]
      },
-     "execution_count": 248,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "#check the accuracy of the model\n",
     "parameters = {'kernel' : ('rbf', 'poly')\n",
-    "              ,'C' : [1,10], 'degree' : [1,2,3,4], 'gamma' : [1,2,3,'auto']}\n",
+    "              ,'C' : [1,50], 'degree' : [1,2,3,10], 'gamma' : [1,2,3,'auto']}\n",
     "model = SVC()\n",
-    "#clf = GridSearchCV(model, parameters)\n",
-    "model.fit(x_train,y_train)\n",
-    "model.score(x_test,y_test)"
+    "clf = GridSearchCV(model, parameters)\n",
+    "clf.fit(x_train,y_train)\n",
+    "clf.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## STILL TO DO\n",
+    " - run it through an average model. Do we recommend or not? \n",
+    " - potentially compare if things run or not\n",
+    " - NMF\n",
+    " - Kmeans (on users... and movies/genome_scores?)\n",
+    " - PCA (both or one?)\n",
+    " - Unknown "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
