--- a/SVM_movie_predictions.ipynb
+++ b/SVM_movie_predictions.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -42,22 +40,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Benjamin's path: path = \"/Users/Armen/Desktop/SpringDataProject/\"\n",
     "#Ben C's path:\n",
     "path = \"/Users/benchristensen/Desktop/Recommneder_System_Project/ml-20m/\"\n",
-    "r = pd.read_csv(path+\"ratings.csv\",nrows=100000)"
+    "r = pd.read_csv(\"ml-20m/ratings.csv\",nrows=100000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def data_setup(user_id):\n",
@@ -111,18 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_id = 50\n",
+    "user__id = 50\n",
     "#dfs, movies_not_seen, movies_seen, known_ratings = set_up_test(user_id)\n",
-    "dfs, movies_not_seen, movies_seen, known_ratings = data_setup(user_id)"
+    "dfs, movies_not_seen, movies_seen, known_ratings = data_setup(user__id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -139,20 +135,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9130434782608695"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#check the accuracy of the model\n",
     "parameters = {'kernel' : ('rbf', 'poly')\n",
@@ -161,6 +146,27 @@
     "clf = GridSearchCV(model, parameters)\n",
     "clf.fit(x_train,y_train)\n",
     "clf.score(x_test,y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "users = 138493 #from the errata file\n",
+    "scores = []\n",
+    "parameters = {'kernel' : ('rbf', 'poly')\n",
+    "              ,'C' : [1,50], 'degree' : [1,2,3,10], 'gamma' : [1,2,3,'auto']}\n",
+    "model = SVC()\n",
+    "clf = GridSearchCV(model, parameters)\n",
+    "for user_id in range(1,5):\n",
+    "    dfs, movies_not_seen, movies_seen, known_ratings = data_setup(user_id)\n",
+    "    x_train, x_test, y_train, y_test = train_test_split(dfs.loc[movies_seen].values,known_ratings)\n",
+    "    clf.fit(x_train,y_train)\n",
+    "    scores.append(clf.score(x_test,y_test))\n",
+    "#This is what we'll want to predict\n",
+    "x_to_predict = dfs.loc[movies_not_seen]"
    ]
   },
   {
@@ -179,9 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -202,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
