Update content filtering

--- a/content-filtering.ipynb
+++ b/content-filtering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -23,24 +23,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Benjamin's path: path = \"/Users/Armen/Desktop/SpringDataProject/\"\n",
     "#Ben C's path:\n",
     "path = \"/Users/benchristensen/Desktop/Recommneder_System_Project/ml-20m/\"\n",
-    "ratings = pd.read_csv(path + \"ratings.csv\", nrows = 10000)\n",
-    "movies = pd.read_csv(path+\"movies.csv\", nrows=10000)\n",
-    "links = pd.read_csv(path+\"links.csv\")\n",
-    "genome_tags = pd.read_csv(path+\"genome-tags.csv\")\n",
-    "tags = pd.read_csv(path+\"tags.csv\")\n",
-    "genome_scores = pd.read_csv(path+\"genome-scores.csv\", nrows=10000)"
+    "ratings = pd.read_csv(path + \"ratings.csv\")#, nrows = 10000)\n",
+    "movies = pd.read_csv(path+\"movies.csv\")#, nrows=10000)\n",
+    "genome_scores = pd.read_csv(path+\"genome-scores.csv\")#, nrows=10000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -58,6 +57,41 @@
     "rating_df = pd.SparseDataFrame(sparse_matrix, \\\n",
     "                             index=user_c.categories, \\\n",
     "                             columns=movie_c.categories)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.539984781355445"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rating_df.density * 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similarity between two movies using Pearson Correlation:\n",
+    "\n",
+    "$r_{ui}:$ User $u$'s rating of movie $i$\n",
+    "\n",
+    "$\\bar{r_i}:$ Average movie rating for movie $i$\n",
+    "\n",
+    "$$sim(i, j) = \\frac{\\sum_u{(r_{ui}-\\bar{r_i})(r_{uj}-\\bar{r_j})}}{\\sqrt{\\sum_u{(r_{ui}-\\bar{r_i})^2}}\\sqrt{\\sum_u{(r_{uj}-\\bar{r_j})^2}}}$$\n",
+    "\n",
+    "Since there are no NaN values in the content-based-filtering approach, cosine similarity is equivalent to pearson correlation."
    ]
   },
   {
@@ -91,8 +125,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Prediction using cosine similarity (Pham et. al):\n",
+    "\n",
+    "$P_{i, j}:$ Prediction for user $i$'s rating of movie $j$\n",
+    "\n",
+    "$r_{i,k}:$ User $i$'s rating of movie $k$ (Equal to $\\bar{r}_k$ if user $k$ hasn't rated movie $j$)\n",
+    "\n",
+    "$\\bar{r}_k:$ Average rating for movie $k$\n",
+    "\n",
+    "$w_{j,k}:$ Cosine similarity between movie $j$ and movie $k$\n",
+    "\n",
+    "$N_j:$ The set of movie $j$'s neighbors\n",
+    "\n",
+    "$$P_{i,j} = \\bar{r}_i + \\frac{\\sum_{k\\in N_j}{(r_{i,k}-\\bar{r}_k)w_{j,k}}}{\\sum_{k\\in N_j}{\\mid w_{j,k}\\mid}}    $$\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -112,7 +166,7 @@
     "        update_df (DataFrame): Dataframe for testing that includes predictions rather\n",
     "                              than any actual ratings.\n",
     "    \"\"\"\n",
-    "    update_df = rating_df.copy().to_dense()\n",
+    "    update_df = rating_df.copy()#.to_dense()\n",
     "    start = timeit.default_timer()\n",
     "    for i, movie_id in enumerate(df.index):\n",
     "        clear_output(wait=True)\n",
@@ -144,8 +198,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Method for predicting user $i$'s movie rating for movie $j$:\n",
+    "\n",
+    "$P_{i, j}:$ Prediction for user $i$'s rating of movie $j$\n",
+    "\n",
+    "$\\bar{r}_i:$ Average rating for user $i$ if $i$ represents a user\n",
+    "\n",
+    "$\\bar{r}_k:$ Average rating for movie $k$ if $k$ represents a movie\n",
+    "\n",
+    "$N_j:$ The neighbors in movie $j$'s cluster\n",
+    "\n",
+    "$\\mid N_j\\mid :$ Number of neighbors in movie $j$'s cluster\n",
+    "\n",
+    "$M:$ All movies\n",
+    "\n",
+    "$\\mathbb{1}(r_{i,k}):$ A function indiciating if user $i$ has rated movie $k$ \n",
+    "\n",
+    "$\\gamma_j : \\frac{\\sum_{k\\in N_j}{\\mathbb{1}(r_{i,k})}}{\\mid N_j \\mid}$\n",
+    "\n",
+    "$$P_{i, j} = \\bar{r}_i + \\frac{\\sum_{k\\in N_j}{(r_{i,k} - \\bar{r}_k)}}{\\mid N_j \\mid}*\\frac{\\gamma_j}{\\max_{k\\in M}{\\gamma_k}} $$\n",
+    "\n",
+    "Change to average movie rating by cluster instead of the current difference?\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -166,7 +249,7 @@
     "    \"\"\"\n",
     "    #Assign clusters\n",
     "    df['cluster'] = model.labels_\n",
-    "    update_df = rating_df.copy().to_dense()\n",
+    "    update_df = rating_df.copy()#.to_dense()\n",
     "    start = timeit.default_timer()\n",
     "    for i, movie_id in enumerate(df.index):\n",
     "        clear_output(wait=True)\n",
@@ -203,7 +286,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "genome_scores.head()"
@@ -242,7 +327,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "new_KNN_1, test_KNN_1 = KNN_Predict(genome_df, rating_df, 10)"
@@ -285,8 +372,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Perform one-hot encoding on genres\n",
@@ -308,9 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_KNN_2, test_KNN_2 = KNN_Predict(movie_df, rating_df, 10)"
@@ -325,33 +412,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "KM_model = KMeans(n_clusters=5).fit(movie_df)"
+    "KM_model = KMeans(n_clusters=50).fit(movie_df)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current progress: 2.17%\n",
-      "Current run time: 7.09 minutes\n",
-      "Expected Run Time: Calculating... minutes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_KMeans_2, test_KMeans_2 = KMeans_Predict(KM_model, movie_df, rating_df)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
